--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "firebase": "^5.5.6",
+    "firebaseui": "^3.4.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
